# gdc-rnaseq-tool

./: .cruft.json  .dockerignore  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  .secrets.baseline  .travis.yml  Dockerfile  MANIFEST.in  Makefile  README.md  dev-requirements.txt  docker-build.sh  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: version.yml
gdc_rnaseq_tool/: __init__.py  __main__.py
gdc_rnaseq_tools/: __init__.py  __main__.py  augment_star_counts.py  merge_counts.py  merge_junctions.py  utils.py
tests/: __init__.py  fakearg.py  test_augment_star_counts.py  test_merge_counts.py  test_merge_junctions.py
tests/etc/: test_set_1.final.tsv
tests/unit/: test_main.py
utils/: merge_star_counts.py  merge_star_junctions.py
