[metadata]
name = gdc-rnaseq-tools
description = RNASeq tools
url = https://github.com/NCI-GDC/gdc-rnaseq-tool
author = Charles Czysz
author_email = czysz@uchicago.edu
python_requires = >=3.6
license_files = LICENSE
long_description = file:README.md
long_description_content_type = text/markdown
classifiers =

[options]
install_requires =
        pandas
        numpy

zip_safe = False
include_package_data = True
packages = find:

[options.entry_points]
console_scripts =
	maflib = gdc_rnaseq_tools.__main__:main
