[metadata]
name = gdc-rnaseq-tools
description = RNASeq tools
url = https://github.com/NCI-GDC/gdc-rnaseq-tool
author = Charles Czysz
author_email = czysz@uchicago.edu
python_requires = >=3.8
license_files = LICENSE
long_description = file:README.md
long_description_content_type = text/markdown
classifiers =
        License :: OSI Approved :: Apache Software License

[options]
install_requires =
        pandas
        numpy

zip_safe = False
include_package_data = True
packages = find:

[options.entry_points]
console_scripts =
	gdc_rnaseq_tools = gdc_rnaseq_tools.__main__:main
